# powerfactory-mcp

./: .gitignore  AGENTS.md  IMPLEMENTATION_CHECKLIST.md  PRODUCT_ROADMAP.md  PowerFactory AI Agent Architecture  README.md  pyproject.toml
.github/workflows/: windows-installer.yml
docs/: friend-test.md
scripts/: bootstrap-windows.ps1  install-windows.ps1  windows-installer-registration.ps1
scripts/probes/: powerfactory_2026_lifecycle.py
scripts/schemas/: __init__.py  generate_domain_schemas.py
specs/architecture/: approval-authority.md  area-load-scaling.md  context-lease-and-fencing.md  crash-reconciliation.md  deployment-and-process-ownership.md  identity-and-revisions.md  load-flow-and-violation-policy.md  mcp-operation-contracts.md  model-graph-topology.md  workflow-state-machine.md
specs/delivery/: buildout-00-windows-handoff.md  buildout-dependency-matrix.md
specs/development/: open-source-adoption-ledger.md
src/powerfactory_agent/: __init__.py  serialization.py
tests/: __init__.py
tests/contract/: test_fake_gateway.py  test_model_graph.py  test_model_inventory.py  test_native_powerfactory2026_vendor.py  test_powerfactory2026_probe_adapter.py  test_powerfactory_gateway2026.py  test_primitive_gateway.py  test_schema_compatibility.py  test_serialized_gateway_owner.py
tests/integration/: test_approval_authority_store.py  test_calculation_graph_overlay.py  test_calculation_overlays.py  test_context_lease_store.py  test_execution_admission.py  test_identity_store.py  test_persistent_model_graph.py  test_powerfactory_2026_lifecycle.py  (+3 more)
(+82 files in other folders)
