[project]
name = "powerfactory-agent"
version = "0.1.0"
description = "Safe agent workflows for DIgSILENT PowerFactory"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "jsonschema>=4.26.0",
    "pytest>=9.1.1",
]
