[project]
name = "powerfactory-agent"
version = "0.1.0"
description = "Safe agent workflows for DIgSILENT PowerFactory"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.26,<2",
    "networkx>=3.4,<4",
    "pydantic>=2.11,<3",
]

[project.scripts]
powerfactory-agent = "powerfactory_agent.mcp.cli:main"

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "jsonschema>=4.26.0",
    "pytest>=9.1.1",
]
